# Telco-WG

./: Draft-OpenChain-Telco-SBOM-Guide_EN.md  Draft-OpenChain-Telco-SBOM-Guide_JP.md  LICENSE  Objectives.md  OpenChain Telco SBOM Specification.md  OpenChain Telco SBOM Specification_JP.md  OpenChain-Telco-SBOM-Guide_1.0_FR.md  OpenChain-Telco-SBOM-Guide_1.1_draft_EN.md  OpenChain-Telco-SBOM-Guide_1.2_DRAFT_EN.md  OpenChain-Telco-SBOM-Guide_EN.md  OpenChain-Telco-SBOM-Guide_FR.md  OpenChain-Telco-SBOM-Guide_JP.md  OpenChain-Telco-SBOM-Guide_KR.md  OpenChain-Telco-SBOM-Guide_ZH_HANT.md  README.md
tools/openchain_telco_sbom_validator/: Dockerfile  LICENSE  README.md  build-container.sh  entry.sh  requirements.txt  run.sh  setup.cfg  setup.py
tools/openchain_telco_sbom_validator/open-source-compliance-artifacts/: open-chain-telco-sbom-validator-0.1.spdx  open-chain-telco-sbom-validator-0.1.spdx.json  open-chain-telco-sbom-validator-0.1.spdx.yml  openchain-telco-sbom-validator-0.1.6.spdx  openchain-telco-sbom-validator-0.1.6.spdx.json  openchain-telco-sbom-validator-0.1.6.spdx.yml  openchain-telco-sbom-validator-0.1.6_disclosure_document.html  openchain-telco-sbom-validator-0.3.1.spdx  openchain-telco-sbom-validator-0.3.1.spdx.json  openchain-telco-sbom-validator-0.3.1.spdx.yml  openchain-telco-sbom-validator-0.3.2.spdx  openchain-telco-sbom-validator-0.3.2.spdx.json  openchain-telco-sbom-validator-0.3.2.spdx.yml  openchain-telco-sbom-validator-0.3.3.spdx  openchain-telco-sbom-validator-0.3.3.spdx.json  openchain-telco-sbom-validator-0.3.3.spdx.yml  openchain-telco-sbom-validator-0.3.4.spdx  openchain-telco-sbom-validator-0.3.4.spdx.json  openchain-telco-sbom-validator-0.3.4.spdx.yaml
tools/openchain_telco_sbom_validator/openchain_telco_sbom_validator/: __init__.py  cli.py  validator.py
tools/openchain_telco_sbom_validator/src/open-chain-telco-sbom-validator/: cli.py  reporter.py
tools/openchain_telco_sbom_validator/src/openchain_telco_sbom_validator/: cli.py  reporter.py  validator.py
tools/openchain_telco_sbom_validator/testing/: test-sbom-01.spdx  test-sbom-02.spdx  test-sbom-03.spdx  test-sbom-04.spdx  test-sbom-05.spdx  test-sbom-06.spdx.json  test-sbom-08.spdx  test-sbom-09.spdx  test-sbom-10.spdx.json  test-sbom-11.spdx  test-test.sh
tools/openchain_telco_sbom_validator/testing/linked-sboms-01/: alarm.spdx.json  alignmentpavendors.spdx.json  alps.spdx.json  em-accessories.spdx.json  kernel-5.15.155-r42.spdx.json  linked-sbom-01.spdx.json  recipe-alarm.spdx.json  recipe-alignmentpavendors.spdx.json  runtime-alarm.spdx.json  runtime-alignmentpavendors.spdx.json  runtime-alps.spdx.json  runtime-kernel-5.15.155-r42.spdx.json
tools/openchain_telco_sbom_validator/testing/linked-sboms-03/: linked-sbom-03.spdx  (+2 more)
tools/openchain_telco_sbom_validator/unittests/: test_functions.py  test_problems.py  test_validator_basic_errors.py  test_validator_generic.py  test_validator_ntia_errors.py  test_validator_ok.py  test_validator_package.py
(+37 files in other folders)
