[metadata]
name = openchain_telco_sbom_validator
version = 0.0.9
author = Gergely Csatari, Marc-Etienne Vargenau
author_email = gergely.csatari@nokia.com, marc-etienne.vargenau@nokia.com
description = Validator against version 1 of the OpenChain Telco SBOM Guide
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/OpenChain-Project/Telco-WG/tree/main/tools/openchain_telco_sbom_validator
project_urls =
    Bug Tracker = https://github.com/OpenChain-Project/Telco-WG/issues
    repository = https://github.com/OpenChain-Project/Telco-WG/
classifiers =
    Development Status :: 1 - Planning
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Communications :: Telephony
    Topic :: Communications
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
zip_safe = True
install_requires =
    spdx-tools>=0.8.2
    requests>=2.32.3
    prettytable>=3.11.0
    packageurl-python>=0.15.6
    ntia-conformance-checker>=3.0.0
    validators>=0.33.0
[options.entry_points]
console_scripts =
        open-chain-telco-sbom-validator=src.cli:main
[options.packages.find]
where = src