[metadata]
name = openchain-telco-sbom-validator
version = 0.3.1
author = Gergely Csatari, Marc-Etienne Vargenau
author_email = gergely.csatari@nokia.com, marc-etienne.vargenau@nokia.com
description = Validator against versions 1.0 and 1.1 of the OpenChain Telco SBOM Guide
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/OpenChain-Project/Telco-WG/tree/main/tools/openchain_telco_sbom_validator
project_urls =
    Bug Tracker = https://github.com/OpenChain-Project/Telco-WG/issues
    repository = https://github.com/OpenChain-Project/Telco-WG/
classifiers =
    Development Status :: 1 - Planning
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Communications :: Telephony
    Topic :: Communications
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
zip_safe = True
install_requires =
    spdx-tools>=0.8.3
    requests>=2.32.4
    prettytable>=3.16.0
    packageurl-python>=0.11.1
    ntia-conformance-checker>=3.2.0
    validators>=0.35.0
[options.entry_points]
console_scripts =
        openchain-telco-sbom-validator=openchain_telco_sbom_validator.cli:main
[options.packages.find]
where = src
